# tmw-archive

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/rules/: liner-project.mdc
alembic/: env.py
alembic/versions/: 0550c656dd00_add_processing_log_table.py  18e47cbf7a1e_initial_schema.py  210ed4a1b667_add_segment_librosa_columns.py  96c25e424a69_initial_schema.py  a3f9c2e81b45_add_coverhunter_content_type_and_song_match_candidates.py  b7e2d4f19a03_add_mert_and_extended_librosa_columns.py
app/: index.html  package-lock.json  package.json
app/src/: index.css  main.tsx
docs/: archive-audit.md  eternal-rehearsal-design.md  tier1.md  tier2.md
pipeline/: api.py  config.py
pipeline/config/: ingest.yaml
pipeline/db/: models.py  processing.py  segments.py  session.py
pipeline/features/: clap_embeddings.py  coverhunter.py  faiss_index.py  librosa_features.py  mert_embeddings.py
pipeline/generation/: __init__.py  personality.py  selector.py  session.py  store.py  transition.py
pipeline/ingest/: core.py  dates.py  scanner.py  tiers.py  transcode.py  vad.py
pipeline/scripts/: assign_titles.py  auto_classify.py  backfill_content_types.py  backfill_durations.py  build_faiss_index.py  build_intermediate_umap.py  build_passage_umap.py  build_segment_umap.py  clap_one_file.py  cluster_passages.py  cluster_per_recording.py  create_songs_for_old.py  create_songs_for_unnamed_jams.py  download_from_dropbox.py  explore_clusters.py  extract_clap_embeddings.py  extract_coverhunter_embeddings.py  extract_librosa_features.py  ingest.py  (+4 more)
scripts/: dropbox_auth.py
(+16 files in other folders)
