[project]
name = "tmw-archive"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "dropbox>=12.0.2",
    "fastapi>=0.135.2",
    "librosa>=0.11.0",
    "numpy>=2.4.3",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]
